--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body class="bg-gray-50 font-sans">
-		<div class="container">
+		<div class="container mx-auto">
 			<!-- Edit -->
 			<section class="flex items-center justify-center h-screen" role="group">
 				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1><br> -->
@@ -21,7 +21,7 @@
 				<a href="{% url 'addstaff' %}">
 					<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
 											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+											focus:ring-4 focus:ring-gray-300">
 						<!-- Heroicon name: solid/pencil -->
 						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z" />
@@ -34,7 +34,7 @@
 				<a href="{% url 'stafflist' %}">
 					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-green-600 rounded-md shadow-sm 
 											text-lg font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
-											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
+											focus:outline-none focus:ring-4 focus:ring-green-400">
 						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
 							stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round"
@@ -48,7 +48,7 @@
 				<a href="{% url 'birthday' %}" target="_blank">
 					<button type="button" class="inline-flex items-center px-4 py-2 border border-indigo-700 rounded-md shadow-sm 
 											text-lg font-medium text-white bg-indigo-700 hover:border-indigo-600 hover:bg-indigo-600 
-											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300">
+											focus:outline-none focus:ring-4 focus:ring-indigo-300">
 						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
 							stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round"
