--- a/sendmail/templates/nobirthday.html
+++ b/sendmail/templates/nobirthday.html
@@ -13,6 +13,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">        
         <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
         <link rel="stylesheet" href="{% static 'css/w3.css' %}">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
         
         <style>
