--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>{{ staff.first_name }}'s Details</title>
+    <title>{{ staff.first_name }}'s Profile</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -22,14 +22,16 @@
 
                 <!-- Dropdown button -->
                 <button id="dropdownButton" data-dropdown-toggle="dropdown"
-                    class="hidden sm:inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5"
-                    type="button">
+                    class="hidden block sm:block text-gray-500 dark:text-gray-400 
+                            hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 
+                            focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5"
+                            type="button">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z">
-                        </path>
+                        <path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path>
                     </svg>
                 </button>
 
+                <!-- Drop down menu -->
                 <div id="dropdown" class="hidden z-10 w-44 text-base list-none bg-gray-300 
                                         rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
                     data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="top"
@@ -53,9 +55,10 @@
                 </div>
             </div>
             
-            <div class="flex flex-col items-center pb-10 space-y-4">
+            <div class="flex flex-col items-center pb-10 sm:mt-3 space-y-4">
                 <!-- Staff image -->
-                <img class="mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staffimage.url }}" alt="{{ staff.first_name }} image">
+                <img class="mt-6 lg:mt-0 mb-3 w-32 h-32 rounded-full shadow-lg" src="{{ staff.staffimage.url }}" 
+                        alt="{{ staff.first_name }} {{ staff.last_name }} image">
 
                 <!-- Name -->
                 <div>
@@ -70,47 +73,75 @@
                     </h5>
                 </div>
                 
-                <!-- Position -->
-                {% if staff.position %}                
-                    <div>
-                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.position }}</p>
-                    </div>
-                    {% else %}
-                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400">Position: nil</span>
-                {% endif %}
+                <!-- Position -->               
+                <div class="inline-flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                    {% if staff.position %} 
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.position }}</p>                    
+                        {% else %}
+                            <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>position not given</em></span>
+                    {% endif %}
+                </div>
 
                 <!-- Phone Number -->
-                {% if staff.phone_number %}
-                    <div>
-                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number }}</p>
-                    </div>
-                    {% else %}  
-                        <span class="text-lg font-bold text-gray-500 dark:text-gray-400">Phone Number: nil</span>                     
-                {% endif %}
+                <div class="inline-flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mt-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                    </svg>
+                    {% if staff.phone_number %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number.as_national }}</p>
+                        {% else %}
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>                     
+                    {% endif %}
+                </div>
                 
                 <!-- Email -->
-                <div>
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
+                <div class="inline-flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                    {% if staff.email %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
+                        {% else %}                                        
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>email not given</em></span>  
+                    {% endif %}
                 </div>
 
                 <!-- Birthday -->
                 <div class="inline-flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500" viewBox="0 0 20 20" fill="currentColor">
-                        <path fill-rule="evenodd" d="M6 3a1 1 0 011-1h.01a1 1 0 010 2H7a1 1 0 01-1-1zm2 3a1 1 0 00-2 0v1a2 2 0 00-2 2v1a2 2 0 00-2 2v.683a3.7 3.7 0 011.055.485 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0 3.704 3.704 0 014.11 0 1.704 1.704 0 001.89 0A3.7 3.7 0 0118 12.683V12a2 2 0 00-2-2V9a2 2 0 00-2-2V6a1 1 0 10-2 0v1h-1V6a1 1 0 10-2 0v1H8V6zm10 8.868a3.704 3.704 0 01-4.055-.036 1.704 1.704 0 00-1.89 0 3.704 3.704 0 01-4.11 0 1.704 1.704 0 00-1.89 0A3.704 3.704 0 012 14.868V17a1 1 0 001 1h14a1 1 0 001-1v-2.132zM9 3a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1zm3 0a1 1 0 011-1h.01a1 1 0 110 2H13a1 1 0 01-1-1z" clip-rule="evenodd" />
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                        stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
                     </svg>
-                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
+                    {% if staff.birth_day %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
+                        {% else %}                                        
+                            <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>birthday</em></span>  
+                    {% endif %}
                 </div>
                 <br>
 
+                <!-- Update and Remove button -->
                 <div class="flex mt-4 space-x-3 lg:mt-6">
 
                     <!-- Update button -->
                     <a href="{% url 'updatestaff' staff.id %}">
                         <button type="button" class="inline-flex items-center mr-1 ml-1 px-4 py-2 border border-green-500 rounded-md shadow-sm 
                                                 text-md font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
-                                                focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
-                            <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                                                focus:outline-none focus:ring-4 focus:ring-green-400">
+                            <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                aria-hidden="true">
+                                <path
+                                    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
                             Update
                         </button>
@@ -120,7 +151,7 @@
                     <a>
                         <button type="button" class="inline-flex items-center ml-1 px-4 py-2 border border-red-600 rounded-md shadow-sm 
                                                 text-md font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
-                                                focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
+                                                focus:outline-none focus:ring-4 focus:ring-red-400">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
