--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -14,11 +14,51 @@
 	</head>
 
     <body class="bg-gray-200 font-sans py-8 px-4">
-        <div class="p-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-8 min-h-full justify-center">
+        
+        <!-- Search bar -->
+        <div class="max-w-3xl bg-white rounded-lg border mx-auto mb-8">
+            
+            <!-- Search form -->
+            <form action="" class="" method="GET">
+                    
+                <div class="relative w-full">
+
+                    <!-- Input -->
+                    <input type="search" id="location-search&quot;" class="block p-4 w-full z-20 text-lg font-bold text-gray-900 bg-white rounded-lg 
+                                                border border-2 border-blue-700 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400 
+                                                dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 
+                                                dark:text-white dark:focus:border-blue-500" 
+                                                placeholder="Search for a staff..." required="">
+                
+                    <!-- Submit button -->
+                    <button type="submit" class="absolute top-0 bottom-0 right-0 p-4 text-md font-medium text-white 
+                                                bg-blue-700 rounded-r-lg border border-blue-700 hover:bg-blue-800 
+                                                ocus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 
+                                                dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
+
+
+        <!-- Staff list -->
+        <div class="p-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
             <div class="flex justify-between items-center mb-4">
                 <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>
-                <a href="{% url 'index' %}" class="text-sm font-medium text-blue-600 underline underline-offset-2 dark:text-blue-500">
-                    Back to Dashboard
+                <a href="{% url 'index' %}" class="text-sm font-medium text-blue-600 2 dark:text-blue-500">
+                    <button type="button" class="inline-flex items-center mr-1 ml-1 px-4 py-2 border border-indigo-500 rounded-md shadow-sm 
+                                                text-md font-medium text-white bg-indigo-500 hover:border-indigo-600 hover:bg-indigo-600 
+                                                focus:outline-none focus:ring-4 focus:ring-indigo-400">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                            <path
+                                d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+                        </svg>
+                        Back to Dashboard
+                    </button>
                 </a>
             </div>
             <div class="flow-root">
@@ -53,8 +93,8 @@
                                 <!-- View Profile Button -->
                                 <a href="{% url 'staffdetails' staff.id %}">
                                     <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-                                                                                                text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-                                                                                                focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+                                                                text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+                                                                focus:ring-2 focus:ring-gray-300">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="currentColor" viewBox="0 0 24 24"
                                             stroke="currentColor" stroke-width="2">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -77,7 +117,9 @@
                 <div class="container font-medium text-gray-500 text-md flex items-center justify-center mt-8 pagination ">
                     <span class="page-links flex items-center justify-between">
                         {% if page_obj.has_previous %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 bg-white text-gray-700 rounded-md border border-gray-400" 
+                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 
+                                    bg-white text-gray-700 rounded-md border border-gray-300 focus:outline-none 
+                                    focus:ring-2 focus:ring-gray-400" 
                                 href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
                                 Previous
                             </a>
@@ -86,7 +128,9 @@
                             page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                         </span>
                         {% if page_obj.has_next %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 text-gray-700 rounded-md border border-gray-400" 
+                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 
+                                    text-gray-700 rounded-md border border-gray-300 hover:bg-gray-50 focus:outline-none 
+                                    focus:ring-2 focus:ring-gray-400" 
                                 href="{{ request.path }}?page={{ page_obj.next_page_number }}">
                                 Next
                             </a>
