--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -20,7 +20,7 @@
 
             <!-- Inner Container -->
             <div class="max-w-2xl lg:max-w-lg w-full space-y-px bg-white shadow-md rounded-lg px-10 py-6">
-                
+
                 <!-- Title -->
                 <div class="w-full">
                     <h2 class="mb-8 text-center text-2xl font-extrabold text-gray-900">
@@ -34,34 +34,26 @@
                     <input type="hidden" name="remember" value="true">
 
                     <!-- Form fields -->
-                    <div class="space-y-2">                        
+                    <div class="space-y-4">                        
                         {% for field in form %}                                
                             <div>
-                                {% if not field %}
-                                    {% render_field field placeholder="nil" class+="lg:text-md font-medium relative block w-full p-3 border border-gray-300 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                  
-                                    {% else %}
-                                        {% render_field field class+="lg:text-md font-medium relative block w-full p-3 border bg-gray-100  placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                  
-                                {% endif %}
-                                <!-- <p class="font-bold text-gray-700">{{ field.label_tag }}</p> -->                                
+                                <p class="font-bold text-gray-600">{{ field.label }}</p> 
+                                {% render_field field class+="text-md lg:text-md font-medium relative block rounded-md w-full p-3 border bg-gray-100  placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                                                                              
                             </div> 
                         {% endfor %}
                     </div>        
         
                     <!-- Submit Button -->
-                    <div>
+                    <div class="mt-8">
                         <button type="submit"
-                            class="group relative w-full flex justify-center py-3 px-4 border border-transparent 
+                            class="group relative w-full flex justify-center mt-8 py-3 px-4 border border-transparent 
                                 text-md font-medium rounded-md text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
-                                focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                                focus:ring-2 focus:ring-indigo-500">
                             <span class="absolute left-0 inset-y-0 flex items-center pl-3">
                                 <!-- Heroicon name: solid/lock-closed -->
-                                <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
-                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                    aria-hidden="true">
-                                    <path fill-rule="evenodd"
-                                        d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                                        clip-rule="evenodd" />
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                                    <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                                  </svg>
                             </span>
                             Update
                         </button>
@@ -70,28 +62,29 @@
                          
                 <!-- Back to Staff List -->
                 <div class="container flex items-center justify-center">
+
                     <!-- Dashboard -->
                     <a href="{% url 'index' %}"
-                        class="inline-flex text-sm font-semibold text-gray-700 mt-8 mr-1 px-4 py-2 border 
+                        class="inline-flex text-sm font-semibold text-gray-700 mt-8 mb-4 mr-1 px-4 py-2 border 
                             rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
-                            focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                            </svg>
-                            Dashboard
+                            focus:ring-2 focus:ring-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                            <path
+                                d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+                        </svg>
+                        Dashboard
                     </a>
 
                     <!-- Staff List -->
                     <a href="{% url 'stafflist' %}"
-                        class="inline-flex text-sm font-semibold text-gray-700 ml-1 mt-8 px-4 py-2 border 
+                        class="inline-flex text-sm font-semibold text-gray-700 mt-8 mb-4 ml-1 px-4 py-2 border 
                             rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
-                            focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                                stroke-width="2">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-                            </svg>
-                            Stafflist
+                            focus:ring-2 focus:ring-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                            stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
+                        </svg>
+                        Stafflist
                     </a>
                 </div>
             </div>
